Tue Sep 10 14:13:33 1996  Tom Yu  <tlyu@mit.edu>

	* kdestroy.M: remove ".so man1/header.doc"

Fri Jul 7 15:52:51 EDT 1995	Paul Park	(pjpark@mit.edu)
	* Makefile.in - Remove explicit library handling and LDFLAGS..
	* configure.in - Add KRB5_LIBRARIES.


Thu Jun 15 17:45:03 EDT 1995	Paul Park	(pjpark@mit.edu)
	* Makefile.in - Change explicit library names to -l<lib> form, and
		change target link line to use $(LD) and associated flags.
	* configure.in - Add shared library usage check.

Fri Jun  9 18:37:19 1995    <tytso@rsx-11.mit.edu>

	* configure.in: Remove standardized set of autoconf macros, which
		are now handled by CONFIG_RULES.

Thu May 04 04:31:53 1995  Chris Provenzano  (proven@mit.edu)

	* kdestroy.c : Added #include <string.h>

Thu Mar  2 12:32:49 1995  Theodore Y. Ts'o  <tytso@dcl>

	* Makefile.in (ISODELIB): Remove reference to $(ISODELIB).

Wed Mar  1 16:26:51 1995  Theodore Y. Ts'o  <tytso@dcl>

	* configure.in: Replace check for -lsocket and -lnsl with
		WITH_NETLIB check.

Tue Feb 28 02:10:17 1995  John Gilmore  (gnu at toad.com)

	* kdestroy.c:  Avoid <krb5/...> and <com_err.h> includes.

Fri Feb 10 18:46:17 1995  Theodore Y. Ts'o  <tytso@dcl>

	* Makefile.in (ISODELIB): Remove ISODE cruft.  Use $(LIBS) so that
		libsocket can be pulled in if necessary.

	* kdestroy.c (main): Call krb5_init_context to initialize the
		context. 

	* configure.in: Add check for libsocket and libnsl (sigh).
		krb5_init_ctx drags in cryptoconf.c, which drags in enough
		of the crypto library that socket() gets called.  We should
		to fix this eventually to make klist smaller, but the fix
		will be subtle.

Fri Jan 13 15:23:47 1995  Chris Provenzano (proven@mit.edu)

    * Added krb5_context to all krb5_routines

Mon Oct  3 19:14:48 1994  Theodore Y. Ts'o  (tytso@dcl)

	* Makefile.in: Use $(srcdir) to find manual page for make install.
