@@ -1,3 +1,9 @@
+Wed Nov  6 12:02:20 1996  Theodore Ts'o  <tytso@rsts-11.mit.edu>
+
+	* kdestroy.c (main): Check the error return from
+ 		krb5_init_context(), and print an error message if
+ 		necessary.
+
 Tue Sep 10 14:13:33 1996  Tom Yu  <tlyu@mit.edu>
 
 	* kdestroy.M: remove ".so man1/header.doc"
